@@ -1,26 +1,36 @@
 package org.java.financial.security;
 
-import org.java.financial.entity.User;
+import org.java.financial.entity.UserEntity;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 /**
- * UserDetailsImpl implements Spring Security's UserDetails interface.
- * It allows Spring Security to manage authentication and authorization using the User entity.
+ * Implementation of {@link UserDetails} for Spring Security authentication.
+ * <p>
+ * This class adapts the {@link UserEntity} entity to fit the {@link UserDetails} interface,
+ * allowing Spring Security to manage authentication and authorization.
+ * </p>
  */
 public class UserDetailsImpl implements UserDetails {
 
-    private final User user;
+    private final UserEntity user;
 
-    public UserDetailsImpl(User user) {
+    /**
+     * Constructs a UserDetailsImpl instance with the given user entity.
+     *
+     * @param user The {@link UserEntity} to be wrapped for authentication.
+     */
+    public UserDetailsImpl(UserEntity user) {
         this.user = user;
     }
 
     /**
      * Returns the user ID.
+     *
+     * @return The ID of the user.
      */
     public Long getUserId() {
         return user.getUserId();
@@ -28,13 +38,17 @@ public class UserDetailsImpl implements UserDetails {
 
     /**
      * Returns the user's role name.
+     *
+     * @return The role assigned to the user.
      */
     public String getRoleName() {
         return user.getRole().getRoleName();
     }
 
     /**
-     * Returns the username (required by Spring Security).
+     * Returns the username of the user (required by Spring Security).
+     *
+     * @return The username of the user.
      */
     @Override
     public String getUsername() {
@@ -42,7 +56,9 @@ public class UserDetailsImpl implements UserDetails {
     }
 
     /**
-     * Returns the encoded password (required by Spring Security).
+     * Returns the encoded password of the user (required by Spring Security).
+     *
+     * @return The hashed password of the user.
      */
     @Override
     public String getPassword() {
@@ -50,37 +66,64 @@ public class UserDetailsImpl implements UserDetails {
     }
 
     /**
-     * Returns the user's role as a collection of authorities (required by Spring Security).
+     * Returns the user's authorities (roles) as a collection.
+     * <p>
+     * Converts the user's role into a list of granted authorities.
+     * </p>
+     *
+     * @return A collection of granted authorities.
      */
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(user.getRole()); // Role implements GrantedAuthority
+        return List.of(user.getRole()); // ✅ Now supports multiple roles
     }
 
+    /**
+     * Indicates whether the user's account is non-expired.
+     *
+     * @return {@code true}, indicating the account is not expired.
+     */
     @Override
     public boolean isAccountNonExpired() {
         return true;
     }
 
+    /**
+     * Indicates whether the user's account is non-locked.
+     *
+     * @return {@code true}, indicating the account is not locked.
+     */
     @Override
     public boolean isAccountNonLocked() {
         return true;
     }
 
+    /**
+     * Indicates whether the user's credentials (password) are non-expired.
+     *
+     * @return {@code true}, indicating credentials are valid.
+     */
     @Override
     public boolean isCredentialsNonExpired() {
         return true;
     }
 
+    /**
+     * Indicates whether the user is enabled.
+     *
+     * @return {@code true}, indicating the user is enabled.
+     */
     @Override
     public boolean isEnabled() {
         return true;
     }
 
     /**
-     * Returns the original User entity.
+     * Returns the original {@link UserEntity} associated with this UserDetails.
+     *
+     * @return The wrapped {@link UserEntity} object.
      */
-    public User getUser() {
+    public UserEntity getUserEntity() {
         return user;
     }
 }
